# fastapi-aws-actions

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
